--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidBook</string>
+    <string name="completed">Completed</string>
+    <string name="not_completed">Not Completed</string>
 </resources>
